[tool.poetry]
name = "bookstore"
version = "0.1.0"
description = ""
authors = ["igorgbr <igorgphotoarte@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pytest = "^7.1.2"
Django = "^4.1"
factory-boy = "^3.2.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
